chore: snapshot actor refactor and local dev runtime